--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,33 @@
-absl-py==2.1.0
-asgiref==3.7.2
+bsl-py==2.1.0
+asgiref==3.8.1
 astunparse==1.6.3
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.3
 blinker==1.8.2
 cachetools==5.3.3
-certifi==2024.2.2
+certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-crispy-bootstrap5==2023.10
-deepface==0.0.91
-Django==4.2.6
-django-crispy-forms==2.1
+deepface==0.0.92
+Django==4.2.13
 dlib==19.24.4
 face-recognition==1.3.0
 face-recognition-models==0.3.0
-filelock==3.14.0
+filelock==3.15.4
 fire==0.6.0
 flask==3.0.3
 flatbuffers==24.3.25
 gast==0.4.0
 gdown==5.2.0
-google-auth==2.29.0
+google-auth==2.30.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
-grpcio==1.64.0
+grpcio==1.64.1
 gunicorn==22.0.0
 h5py==3.11.0
 idna==3.7
-importlib-metadata==7.1.0
+importlib-metadata==8.0.0
 itsdangerous==2.2.0
 jinja2==3.1.4
 joblib==1.4.2
@@ -40,19 +38,18 @@ MarkupSafe==2.1.5
 mtcnn==0.1.1
 numpy==1.24.3
 oauthlib==3.2.2
-opencv-python==4.9.0.80
+opencv-contrib-python==4.10.0.84
+opencv-python==4.10.0.84
 opt-einsum==3.3.0
-packaging==24.0
+packaging==24.1
 pandas==2.0.3
-Pillow==10.1.0
+pillow==10.3.0
 protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1-modules==0.4.0
-pypng==0.20220715.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
-qrcode==7.4.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 retina-face==0.0.17
@@ -61,7 +58,7 @@ scikit-learn==1.3.2
 scipy==1.10.1
 six==1.16.0
 soupsieve==2.5
-sqlparse==0.4.4
+sqlparse==0.5.0
 tensorboard==2.13.0
 tensorboard-data-server==0.7.2
 tensorflow==2.13.0
@@ -72,8 +69,8 @@ termcolor==2.4.0
 threadpoolctl==3.5.0
 tqdm==4.66.4
 typing-extensions==4.5.0
-tzdata==2023.3
-urllib3==2.2.1
+tzdata==2024.1
+urllib3==2.2.2
 werkzeug==3.0.3
 wrapt==1.16.0
-zipp==3.19.0
+zipp==3.19.2
