--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 absl-py==2.1.0
 asgiref==3.8.1
-astunparse==1.6.3
+astunparse==1.6.3        
 backports.zoneinfo==0.2.1
-beautifulsoup4==4.12.3
+beautifulsoup4==4.12.3   
 blinker==1.8.2
-cachetools==5.3.3
-certifi==2024.6.2
+cachetools==5.3.3        
+certifi==2024.6.2        
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -74,5 +74,6 @@ typing-extensions==4.5.0
 tzdata==2024.1
 urllib3==2.2.2
 werkzeug==3.0.3
+whitenoise==6.7.0
 wrapt==1.16.0
 zipp==3.19.2
