--- a/Dockerfile.origin
+++ b/Dockerfile.origin
@@ -10,5 +10,15 @@ RUN apt-get update \
 
 
 WORKDIR /app
+COPY requirements.txt .
+
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+RUN python manage.py collectstatic --noinput
+
+EXPOSE 8000
+
+
+CMD ["gunicorn", "MentorM.wsgi:application", "--bind", "0.0.0.0:8000"]
